syntax = "proto3";

import "consensus.proto";
import "liveness.proto";

package test;

message PeerId {
    bytes id = 1;
}

message Status {
    PeerId peer_id = 1;
    uint64 height = 2;
    uint64 earliest_height = 3;
}

message ValueRequest {
    uint64 height = 1;
    optional uint64 end_height = 2;
}

message ValueResponse {
    uint64 start_height = 1;
    repeated SyncedValue values = 2;
}

message SyncedValue {
    bytes value_bytes = 1;
    // FaB: Certificate is now a Vec<SignedVote> containing 4f+1 prevotes
    Certificate certificate = 2;
}

message CommitSignature {
    // TODO: Add flag (no vote, nil, value?)
    Address validator_address = 1;
    Signature signature = 2;
}

message CommitCertificate {
    uint64 height = 1;
    uint32 round = 2;
    ValueId value_id = 3;
    repeated CommitSignature signatures = 4;
}

// FaB: Certificate is a Vec<SignedVote> containing 4f+1 prevote messages
message Certificate {
    repeated SignedMessage votes = 1;
}

message ProposedValue {
    uint64 height = 1;
    uint32 round = 2;
    optional uint32 valid_round = 3;
    Address proposer = 4;
    Value value = 5;
    bool validity = 6;
}

message SyncRequest {
  oneof request {
    ValueRequest value_request = 1;
  }
}

message SyncResponse {
  oneof response {
    ValueResponse value_response = 1;
  }
}
